cleaned CSVs, created Parquets, added QA Checks, created price and volume plots

--- a/notebooks/Day1_Ingestion.ipynb
+++ b/notebooks/Day1_Ingestion.ipynb
@@ -303,7 +303,7 @@
     "                    \"high\": row.get(\"2. high\"),\n",
     "                    \"low\":  row.get(\"3. low\"),\n",
     "                    \"close\":row.get(\"4. close\"),\n",
-    "                    \"adj_close\": row.get(\"4. close\"),   # no adjusted on free daily\n",
+    "                    \"adj_close\": row.get(\"4. close\"),   # no adjusted on free daily API, so we will use close to fill the column\n",
     "                    \"volume\": row.get(\"5. volume\"),\n",
     "                })\n",
     "            df = pd.DataFrame(rows)\n",
