fixed NaN and dataframe length incosistency errors that occured with CLI scripts

--- a/notebooks/Day1_Ingestion.ipynb
+++ b/notebooks/Day1_Ingestion.ipynb
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "05bb399b-b3b9-4821-b50c-2afa2ea68a79",
    "metadata": {},
    "outputs": [
@@ -393,9 +393,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved QQQ: 6493 rows.\n",
-      "Saved VFV.TO: 3210 rows.\n",
-      "Saved XEQT.TO: 1514 rows.\n"
+      "Saved QQQ: 6506 rows.\n"
      ]
     }
    ],
